[project]
name = "parsers"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "celery[redis] (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aio-celery (>=0.20.0,<0.21.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "2captcha-python (>=1.5.1,<2.0.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)",
    "ruff (>=0.12.4,<0.13.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["I"]
fixable = ["I"]
unfixable = ["F401", "F841"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
